feat: list team screens
